modal overflow fix

--- a/css/index.css
+++ b/css/index.css
@@ -2224,8 +2224,8 @@ a {
 .backdrop {
   position: fixed;
   z-index: 99999;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   top: 0;
   left: 0;
   padding: 0 15px;
@@ -2240,6 +2240,13 @@ a {
   opacity: 0;
   pointer-events: none;
   scale: 1.2;
+}
+@media screen and (max-width: 767px) {
+  .backdrop--overflow {
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
 }
 
 .modal {
@@ -2320,6 +2327,7 @@ a {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 100%;
+  max-width: 368px;
 }
 
 .form-modal__label {
