--- a/src/sass/components/_backdrop.scss
+++ b/src/sass/components/_backdrop.scss
@@ -2,8 +2,8 @@
   position: fixed;
   z-index: 99999;
   @extend %flexCenter;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   top: 0;
   left: 0;
   padding: 0 15px;
@@ -18,5 +18,11 @@
     opacity: 0;
     pointer-events: none;
     scale: 1.2;
+  }
+
+  &--overflow {
+    @media screen and ($mobile-max) {
+      align-items: baseline;
+    }
   }
 }
