--- a/src/sass/components/_modalwin.scss
+++ b/src/sass/components/_modalwin.scss
@@ -2,6 +2,7 @@
   @extend %flexCenter;
   flex-direction: column;
   width: 100%;
+  max-width: 368px;
 }
 
 .form-modal__label {
